--- a/galaxy/certbot-dns-digitalocean/.artixlinux/pkgbase.yaml
+++ b/galaxy/certbot-dns-digitalocean/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: certbot-dns-digitalocean
-  version: 4.0.0-2
-  arch:
-    - any
-  pkgname:
-    - certbot-dns-digitalocean
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 4.0.0-2
+    version: 4.1.1-1
     packages:
-      - certbot-dns-digitalocean-4.0.0-2-any.pkg.tar.zst
+      - certbot-dns-digitalocean-4.1.1-1-any.pkg.tar.zst
+    debug: []
 team: galaxy
