--- a/world/xorg-server/.artixlinux/pkgbase.yaml
+++ b/world/xorg-server/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,14 +29,14 @@ repos:
     packages: []
     debug: []
   world:
-    version: 21.1.17-1
+    version: 21.1.18-1
     packages:
-      - xorg-server-21.1.17-1-x86_64.pkg.tar.zst
-      - xorg-server-xephyr-21.1.17-1-x86_64.pkg.tar.zst
-      - xorg-server-xvfb-21.1.17-1-x86_64.pkg.tar.zst
-      - xorg-server-xnest-21.1.17-1-x86_64.pkg.tar.zst
-      - xorg-server-common-21.1.17-1-x86_64.pkg.tar.zst
-      - xorg-server-devel-21.1.17-1-x86_64.pkg.tar.zst
+      - xorg-server-21.1.18-1-x86_64.pkg.tar.zst
+      - xorg-server-xephyr-21.1.18-1-x86_64.pkg.tar.zst
+      - xorg-server-xvfb-21.1.18-1-x86_64.pkg.tar.zst
+      - xorg-server-xnest-21.1.18-1-x86_64.pkg.tar.zst
+      - xorg-server-common-21.1.18-1-x86_64.pkg.tar.zst
+      - xorg-server-devel-21.1.18-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
