--- a/world/xf86-input-wacom/.artixlinux/pkgbase.yaml
+++ b/world/xf86-input-wacom/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
-  addRepo: null
-  removeRepo: galaxy-goblins
-  triggersBuild: false
+  addRepo: world
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: true
+  triggersRepoAdd: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 1.2.3-1
+    version: 1.2.3-1.1
     packages:
-      - xf86-input-wacom-1.2.3-1-x86_64.pkg.tar.zst
+      - xf86-input-wacom-1.2.3-1.1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
