--- a/world/fcitx5-gtk/PKGBUILD
+++ b/world/fcitx5-gtk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: csslayer <wengxt AT gmail com>
 
 pkgname=fcitx5-gtk
-pkgver=5.1.3
+pkgver=5.1.4
 pkgrel=1
 pkgdesc="Fcitx5 gtk im module and glib based dbus client library"
 arch=('x86_64')
@@ -10,9 +10,9 @@ url="https://github.com/fcitx/fcitx5-gtk"
 license=('GPL')
 groups=('fcitx5-im')
 depends=('glib2')
-makedepends=('git' 'extra-cmake-modules' 'gobject-introspection' 'gtk2' 'gtk3' 'gtk4' 'ninja' 'vulkan-headers')
+makedepends=('git' 'extra-cmake-modules' 'glib2-devel' 'gobject-introspection' 'gtk2' 'gtk3' 'gtk4' 'ninja' 'vulkan-headers')
 source=("git+https://github.com/fcitx/fcitx5-gtk.git#tag=$pkgver?signed")
-sha512sums=('3b768a8027ed16355f2d9d46fe4b25e4c1101d6e1881b6b98f35357e45b014ad7fc221123a38341ca887b534178477dcfbd0e85879474d6a168d9e54939b047f')
+sha512sums=('df69f1c9cd9b466191358e7ff34335e5cb1437a36883b1803b7a40be90eaba5efa4d6e197cfe3545f61f236ec834e88ba8c8203867b571f105b0b8fa0f6c6244')
 validpgpkeys=('2CC8A0609AD2A479C65B6D5C8E8B898CBF2412F9') # Weng Xuetian <wengxt@gmail.com>
 
 build(){
