--- a/world/qtcreator/.artixlinux/pkgbase.yaml
+++ b/world/qtcreator/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,10 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 16.0.2-4
+    version: 17.0.0-1
     packages:
-      - qtcreator-16.0.2-4-x86_64.pkg.tar.zst
-      - qtcreator-devel-16.0.2-4-x86_64.pkg.tar.zst
+      - qtcreator-17.0.0-1-x86_64.pkg.tar.zst
+      - qtcreator-devel-17.0.0-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
