--- a/world/tea/.artixlinux/pkgbase.yaml
+++ b/world/tea/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: tea
-  version: 0.9.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - tea
 actions:
   addRepo: world
   removeRepo: null
@@ -18,37 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.9.2-1
+    version: 0.10.1-1
     packages:
-      - tea-0.9.2-1-x86_64.pkg.tar.zst
+      - tea-0.10.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
+team: world
