--- a/world/ksystemstats/PKGBUILD
+++ b/world/ksystemstats/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=ksystemstats
-pkgver=6.3.5
+pkgver=6.4.0
 _dirver=$(echo $pkgver | cut -d. -f1-3)
 pkgrel=1
 pkgdesc='A plugin based system monitoring daemon'
@@ -25,8 +25,9 @@ optdepends=('libnl: network usage monitor'
             'networkmanager-qt: network usage monitor'
             'libudev: GPU monitor')
 groups=(plasma)
+install=ksystemstats.install
 source=(https://download.kde.org/stable/plasma/$_dirver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e2fd8ba3fd0ae0ff910b3fd96f617569d1bfb00c2796869feb5f8fb334ef4355'
+sha256sums=('e0f8855a4db91508066b9da5108ddbce48bbadda64bb96653ac2fb312fc1468e'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
@@ -35,7 +36,8 @@ validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell
 
 build() {
   cmake -B build  -S $pkgname-$pkgver \
-    -DBUILD_TESTING=OFF
+    -DBUILD_TESTING=OFF \
+    -DCMAKE_INSTALL_LIBEXECDIR=lib
   cmake --build build
 }
 
