--- a/world/libblastrampoline/PKGBUILD
+++ b/world/libblastrampoline/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=libblastrampoline
-pkgver=5.13.0
+pkgver=5.13.1
 pkgrel=1
 pkgdesc='Using PLT trampolines to provide a BLAS and LAPACK demuxing library'
 arch=(x86_64)
@@ -11,7 +11,7 @@ license=(MIT)
 depends=(glibc)
 makedepends=(git)
 source=(git+https://github.com/JuliaLinearAlgebra/libblastrampoline#tag=v$pkgver)
-sha256sums=('0f6676b24a749921fe714c9887cc16d0ed22f643a2893dcc4840973838f1a7fa')
+sha256sums=('4c128ac01a7cce9a8b4bab4b0b7beeebeda133412e4293e25887a194948a064f')
 options=(!lto)
 
 build() {
@@ -26,5 +26,5 @@ build() {
 package() {
   cd $pkgname/src
   make F2C_AUTODETECTION=0 COMPLEX_RETSTYLE_AUTODETECTION=0 prefix="$pkgdir"/usr install
-  install -Dm644 ../LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname
+  install -Dm644 ../LICENSE.md -t "$pkgdir"/usr/share/licenses/$pkgname
 }
