--- a/world/mingw-w64-binutils/.artixlinux/pkgbase.yaml
+++ b/world/mingw-w64-binutils/.artixlinux/pkgbase.yaml
@@ -1,6 +1,6 @@
 ---
 actions:
-  addRepo: world
+  addRepo: world-gremlins
   removeRepo: null
   triggersBuild: true
   triggersRebuild: false
@@ -25,8 +25,9 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: null
-    packages: []
+    version: 2.44-2
+    packages:
+      - mingw-w64-binutils-2.44-2-x86_64.pkg.tar.zst
     debug: []
   world:
     version: 2.44-1
