--- a/world/mingw-w64-headers/.artixlinux/pkgbase.yaml
+++ b/world/mingw-w64-headers/.artixlinux/pkgbase.yaml
@@ -1,6 +1,6 @@
 ---
 actions:
-  addRepo: world
+  addRepo: world-gremlins
   removeRepo: null
   triggersBuild: true
   triggersRebuild: false
@@ -25,8 +25,9 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: null
-    packages: []
+    version: 13.0.0-1
+    packages:
+      - mingw-w64-headers-13.0.0-1-any.pkg.tar.zst
     debug: []
   world:
     version: 12.0.0-1
