--- a/world/mingw-w64-headers/.artixlinux/pkgbase.yaml
+++ b/world/mingw-w64-headers/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
-  addRepo: world-gremlins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: world
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,14 +25,13 @@ repos:
     packages: []
     debug: []
   world-gremlins:
+    version: null
+    packages: []
+    debug: []
+  world:
     version: 13.0.0-1
     packages:
       - mingw-w64-headers-13.0.0-1-any.pkg.tar.zst
-    debug: []
-  world:
-    version: 12.0.0-1
-    packages:
-      - mingw-w64-headers-12.0.0-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
