--- a/world/mingw-w64-winpthreads/.artixlinux/pkgbase.yaml
+++ b/world/mingw-w64-winpthreads/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 12.0.0-1.1
+    version: 13.0.0-1
     packages:
-      - mingw-w64-winpthreads-12.0.0-1.1-any.pkg.tar.zst
+      - mingw-w64-winpthreads-13.0.0-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
