--- a/galaxy/xfburn/PKGBUILD
+++ b/galaxy/xfburn/PKGBUILD
@@ -5,8 +5,8 @@
 # Contributor: Alois Nespor alois.nespor@gmail.com
 
 pkgname=xfburn
-pkgver=0.7.2
-pkgrel=3
+pkgver=0.8.0
+pkgrel=1
 pkgdesc="A simple CD/DVD burning tool based on libburnia libraries"
 arch=('x86_64')
 url="https://docs.xfce.org/apps/xfburn/start"
@@ -14,28 +14,17 @@ license=('GPL-2.0-or-later')
 groups=('xfce4-goodies')
 depends=('libburn' 'libisofs' 'gtk3' 'libxfce4ui' 'exo' 'gst-plugins-base-libs'
          'libgudev' 'desktop-file-utils')
-makedepends=('git' 'glib2-devel' 'xfce4-dev-tools')
+makedepends=('git' 'glib2-devel' 'meson' 'xfce4-dev-tools')
 source=("git+https://gitlab.xfce.org/apps/xfburn.git#tag=$pkgname-$pkgver")
-sha256sums=('17a9d51c1b768b0044d5651a2d1bca0763135013a28e0f9304cc531413fd38b5')
-
-prepare() {
-  cd $pkgname
-  NOCONFIGURE=1 ./autogen.sh
-}
+sha256sums=('f928ca59342c586c9138a686f8a6861281794fceda1b459abf00621308fca7c3')
 
 build() {
-  cd $pkgname
-  ./configure \
-    --prefix=/usr \
-    --enable-gstreamer \
-    --disable-debug \
-    --enable-maintainer-mode
-  make
+  artix-meson $pkgname build
+  meson compile -C build
 }
 
 package() {
-  cd $pkgname
-  make DESTDIR="$pkgdir" install
+  meson install -C build --destdir "$pkgdir"
 }
 
 # vim:set ts=2 sw=2 et:
