--- a/world/openblas/.artixlinux/pkgbase.yaml
+++ b/world/openblas/.artixlinux/pkgbase.yaml
@@ -1,14 +1,4 @@
 ---
-pkgbase:
-  name: openblas
-  version: 0.3.29-1
-  arch:
-    - x86_64
-  pkgname:
-    - openblas
-    - openblas64
-    - blas-openblas
-    - blas64-openblas
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -21,41 +11,53 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.3.29-1
+    version: 0.3.30-1
     packages:
-      - openblas-0.3.29-1-x86_64.pkg.tar.zst
-      - openblas64-0.3.29-1-x86_64.pkg.tar.zst
-      - blas-openblas-0.3.29-1-x86_64.pkg.tar.zst
-      - blas64-openblas-0.3.29-1-x86_64.pkg.tar.zst
+      - openblas-0.3.30-1-x86_64.pkg.tar.zst
+      - openblas64-0.3.30-1-x86_64.pkg.tar.zst
+      - blas-openblas-0.3.30-1-x86_64.pkg.tar.zst
+      - blas64-openblas-0.3.30-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
