--- a/world/python-textual/.artixlinux/pkgbase.yaml
+++ b/world/python-textual/.artixlinux/pkgbase.yaml
@@ -25,13 +25,14 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: null
-    packages: []
+    version: 3.4.0-1
+    packages:
+      - python-textual-3.4.0-1-any.pkg.tar.zst
     debug: []
   world:
-    version: 3.3.0-1
+    version: 3.5.0-1
     packages:
-      - python-textual-3.3.0-1-any.pkg.tar.zst
+      - python-textual-3.5.0-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
