Updated ruby-bundler - 2.6.9-1

--- a/world/ruby-bundler/.nvchecker.toml
+++ b/world/ruby-bundler/.nvchecker.toml
@@ -1,4 +1,5 @@
 [ruby-bundler]
 source = "git"
 git = "https://github.com/rubygems/rubygems.git"
-prefix = "v"
+include_regex = "bundler-v.*"
+prefix = "bundler-v"
