--- a/world/ruby-ffi/PKGBUILD
+++ b/world/ruby-ffi/PKGBUILD
@@ -7,33 +7,62 @@
 _gemname=ffi
 pkgname=ruby-$_gemname
 pkgver=1.17.1
-pkgrel=3
+pkgrel=4
 pkgdesc='Ruby FFI'
 arch=('x86_64')
 url='https://github.com/ffi/ffi'
 license=('BSD-3-Clause' 'MIT')
-depends=('ruby')
-makedepends=('ruby-rdoc')
+depends=(
+  glibc
+  libffi
+  ruby
+)
+makedepends=(
+  git
+  ruby-bundler
+  ruby-rake
+  ruby-rake-compiler
+  ruby-rdoc
+  ruby-rspec
+)
+checkdepends=(ruby-bigdecimal)
 options=('!emptydirs')
-source=("https://rubygems.org/downloads/$_gemname-$pkgver.gem")
-noextract=("$_gemname-$pkgver.gem")
-sha512sums=('b467ef8bcd0f3877705b352502489d4918113fed741a44e1e954bfa921a6b5620730829e677c739c356473e8b4d4c7a57e302439b06d06bf46e36c09b17b78f7')
-b2sums=('2d96b4bc2a4e46e4de6b13ad20bec05f33f8651c4d8fc91bf927459e65526f514395242cdabbeede370c5132e27119d345579ebf38a20df0f7554608940fc067')
+source=(
+  "$pkgname::git+$url#tag=v$pkgver"
+  "github.com-libffi-libffi::git+https://github.com/libffi/libffi"
+)
+sha512sums=('1df58ff0354e46cff0951a7ef0179aa76d1d715d6c0fbe3f8a898b6d5f1e8ab732725db56f37d12c3ba7782228507f938c859109291ac777a0763df1fd42b498'
+            'SKIP')
+b2sums=('e80602970fce51a32070e8fbc20313656c6bac3730d2272244f80af811185da76ac876a2354626cbc000da68bae81ea83a89732ff239bfd759b2b6cb55a89e0b'
+        'SKIP')
 
-package() {
+prepare() {
+  cd "$pkgname"
+
+  git submodule init
+  git config submodule.ext/ffi_c/libffi.url "$srcdir/github.com-libffi-libffi"
+  git -c protocol.file.allow=always submodule update
+}
+
+build() {
+  cd "$pkgname"
+
   local _gemdir="$(ruby -e'puts Gem.default_dir')"
+
+  rake compile
+  gem build --verbose "${_gemname}.gemspec"
 
   gem install \
     --verbose \
     --ignore-dependencies \
     --no-document \
     --no-user-install \
-    --install-dir "$pkgdir/$_gemdir" \
-    --bindir "$pkgdir/usr/bin" \
+    --install-dir "tmp_install${_gemdir}" \
+    --bindir "tmp_install/usr/bin" \
     "$_gemname-$pkgver.gem"
 
   # delete unnecessary files & folders
-  cd "$pkgdir/$_gemdir"
+  cd "tmp_install/$_gemdir"
   find . -type f -name 'gem_make.out' -delete -o -name 'mkmf.log' -delete
   rm -vrf cache
   cd "gems/$_gemname-$pkgver"
@@ -41,18 +70,32 @@ package() {
   find lib/ffi/platform/* -prune -not -name "$CARCH-linux" -exec rm -rf {} +
 
   # move documentation
-  install -vd "$pkgdir/usr/share/doc/$pkgname"
-  mv -v samples CHANGELOG.md README.md "$pkgdir/usr/share/doc/$pkgname"
+  install -vd "$srcdir/$pkgname/tmp_install/usr/share/doc/$pkgname"
+  mv -v samples CHANGELOG.md README.md "$srcdir/$pkgname/tmp_install/usr/share/doc/$pkgname"
 
   # move licenses
-  install -vd "$pkgdir/usr/share/licenses/$pkgname"
-  mv -v LICENSE* COPYING "$pkgdir/usr/share/licenses/$pkgname"
+  install -vd "$srcdir/$pkgname/tmp_install/usr/share/licenses/$pkgname"
+  mv -v LICENSE* COPYING "$srcdir/$pkgname/tmp_install/usr/share/licenses/$pkgname"
 
   # generate Ruby documentation
   rdoc \
     --format ri \
-    --output "$pkgdir$_gemdir/doc/$_gemname-$pkgver/ri" \
+    --output "$srcdir/$pkgname/tmp_install$_gemdir/doc/$_gemname-$pkgver/ri" \
     ./lib
   # delete unnecessary artifacts
-  rm -rf "$pkgdir$_gemdir/doc/$_gemname-$pkgver/ri/"{lib,created.rid}
+  rm -rf "$srcdir/$pkgname/tmp_install$_gemdir/doc/$_gemname-$pkgver/ri/"{lib,created.rid}
+}
+
+check() {
+  cd "$pkgname"
+
+  local _gemdir="$(ruby -e'puts Gem.default_dir')"
+
+  GEM_HOME="tmp_install${_gemdir}" rake test
+}
+
+package() {
+  cd "$pkgname"
+
+  cp --archive --verbose tmp_install/* "${pkgdir}"
 }
