Updated perl-alien-cmake3 - 0.09-1

--- a/world/perl-alien-cmake3/PKGBUILD
+++ b/world/perl-alien-cmake3/PKGBUILD
@@ -1,17 +1,17 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=perl-alien-cmake3
-pkgver=0.08
-pkgrel=6
+pkgver=0.09
+pkgrel=1
 pkgdesc="Find or download or build cmake 3 or better"
 arch=('any')
 license=('PerlArtistic')
 url="https://metacpan.org/release/Alien-cmake3"
 depends=('cmake' 'perl-alien-build')
-makedepends=('perl-html-parser' 'perl-sort-versions' 'perl-test2-suite' 'perl-uri')
+makedepends=('perl-html-parser' 'perl-sort-versions' 'perl-test2-suite' 'perl-uri' 'perl-io-socket-ssl' 'perl-mozilla-ca')
 options=('!emptydirs')
 source=("https://cpan.metacpan.org/authors/id/P/PL/PLICEASE/Alien-cmake3-$pkgver.tar.gz")
-sha512sums=('a5956f488978ff64f9ca8ff7dec06d753731982cd5cf510b45197546e0a091bee37d641a262e7f16901afbb3c42fc3388d76e6a3b92d4be9882e11267eb98494')
+sha512sums=('6d0fb388b41fc30291af982fb9725945ddbcd3dd12ce579198b049d8c00f297644e5aed9033553906d44ba0a1d9a3207c6d8fc040ffdc112bec5b990b3463252')
 
 build() {
   cd Alien-cmake3-$pkgver
