--- a/world/python-urwid/.artixlinux/pkgbase.yaml
+++ b/world/python-urwid/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 2.6.16-2
+    version: 3.0.2-1
     packages:
-      - python-urwid-2.6.16-2-any.pkg.tar.zst
+      - python-urwid-3.0.2-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
