Updated util-linux - 2.41.1-1

--- a/system/util-linux/.artixlinux/pkgbase.yaml
+++ b/system/util-linux/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: util-linux
-  version: 2.41-4
-  arch:
-    - x86_64
-  pkgname:
-    - util-linux
-    - util-linux-libs
 actions:
-  addRepo: null
+  addRepo: system
   removeRepo: system-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
+  triggersRepoAdd: true
   triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 2.41-4
+    version: 2.41.1-1
     packages:
-      - util-linux-2.41-4-x86_64.pkg.tar.zst
-      - util-linux-libs-2.41-4-x86_64.pkg.tar.zst
+      - util-linux-2.41.1-1-x86_64.pkg.tar.zst
+      - util-linux-libs-2.41.1-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
