--- a/world/molecule/PKGBUILD
+++ b/world/molecule/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: David Runge <dvzrv@archlinux.org>
 
 pkgname=molecule
-pkgver=25.5.0
+pkgver=25.6.0
 pkgrel=1
 pkgdesc="Aids in the development and testing of Ansible roles"
 url="https://github.com/ansible-community/molecule"
@@ -10,16 +10,17 @@ arch=('any')
 license=('MIT')
 depends=('python' 'python-ansible-compat' 'python-click' 'python-click-help-colors' 'python-enrich' 'python-jinja' 'python-jsonschema' 'python-packaging' 'python-pluggy' 'python-pyyaml' 'python-rich' 'python-wcmatch')
 makedepends=('python-build' 'python-installer' 'python-setuptools' 'python-setuptools-scm' 'python-wheel' 'git')
-checkdepends=('ansible' 'check-jsonschema' 'python-ansi2html' 'python-filelock' 'python-pexpect' 'python-pytest' 'python-pytest-mock' 'python-pytest-testinfra' 'python-pytest-xdist' 'python-regress' 'python-uv' 'yamllint')
+checkdepends=('ansible' 'ansible-navigator' 'check-jsonschema' 'python-ansi2html' 'python-filelock' 'python-pexpect' 'python-pytest' 'python-pytest-mock' 'python-pytest-testinfra' 'python-pytest-xdist' 'python-regress' 'python-uv' 'yamllint')
 optdepends=('ansible: for the ansible verifier'
+            'ansible-navigator: to use navigator as playbook executor'
             'molecule-docker: for the docker driver'
-	    'molecule-podman: for the podman driver'
-	    'molecule-vagrant: for the vagrant driver'
-	    'python-pywinrm: for Windows support'
-	    'python-pytest-testinfra: for the testinfra verifier')
+            'molecule-podman: for the podman driver'
+            'molecule-vagrant: for the vagrant driver'
+            'python-pywinrm: for Windows support'
+            'python-pytest-testinfra: for the testinfra verifier')
 source=("git+${url}.git#tag=v${pkgver}")
-sha512sums=('7f09d01b23086fb16bfdf0cf5f2d66e12ed3c4e63f97fb17dd8a3613d6030f8b4d15bbddf491fefb708ae2d82032a69ca0a625a412a15ff73dc7f6aceb1bcf22')
-b2sums=('76ee97f4131de6445e7a91656ceaa81d6023539c7cda23b1859e0c78c45dca39a2b52fe289991f7c7b066ffbb0bc4a14df17f464757a62b5617c1341066162d9')
+sha512sums=('3d16f7910d69bc28871be20d8f7190e04e8443cf435c5cdb9d1972491791dd91acc83781d18d3f8711317cbf80b63520db1351bb4d3b946859c26b4914a7a23e')
+b2sums=('27719f12c0d60b074a4fc5ff7064757169b16bcc082911765b41b817dcef776dd0cff1250117a42c4c699caa05019bfad8306bfd442fd0357a039b9899da60e3')
 
 build() {
 	cd "${pkgname}"
